2009-04-30  Elliott Baron  <ebaron@redhat.com>

	* CoreMessagesViewer.java: New file.
	* META-INF/MANIFEST.MF: New deps.
	* ValgrindViewPart.java: Handle the work previously done in MemcheckViewPart.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: 0.2.0 version.

2009-03-31  Elliott Baron  <ebaron@redhat.com>

	* CollapseAction.java: New file.
	* ExpandAction.java: New file.
	* messages.properties: New strings.
	* ValgrindViewPart.java (createPartControl): Remove margins for dynamic content.

2009-03-17  Elliott Baron  <ebaron@redhat.com>

	* ValgrindViewPart.java (createDynamicContent): Call dispose on old dynamicView.

2009-02-27  Elliott Baron  <ebaron@redhat.com>

	* ValgrindUIPlugin.java: Added some documentation.

2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* schema/org.eclipse.linuxtools.valgrind.ui.valgrindToolViews.exsd: Renamed.
	* schema/valgrindToolViews.exsd: New file.
	* ValgrindUIPlugin.java: Refactoring.

2009-01-05  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Changed version to 0.1.0.
	* build.properties: Include about.html and icons.