@@ -11,8 +11,10 @@ Bundle-RequiredExecutionEnvironment: J2SE-1.5
 Bundle-ActivationPolicy: lazy
 Export-Package: org.eclipse.linuxtools.valgrind.ui
 Bundle-Localization: plugin
-Import-Package: org.eclipse.debug.core,
+Import-Package: org.eclipse.cdt.debug.ui,
+ org.eclipse.debug.core,
  org.eclipse.debug.core.model,
+ org.eclipse.debug.core.sourcelookup,
  org.eclipse.debug.ui,
  org.eclipse.debug.ui.sourcelookup,
  org.eclipse.jface.text,
