@@ -1,3 +1,8 @@
+2009-07-28  Elliott Baron  <ebaron@redhat.com>
+
+	* META-INF/MANIFEST.MF: New dependencies. 
+	* CoreMessagesViewer.java (.doubleClick): Recreate SourceLocator once disposed.
+
 2009-04-30  Elliott Baron  <ebaron@redhat.com>
 
 	* CoreMessagesViewer.java: New file.
